--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node www.js",
     "build": "ng build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "ng lint",
@@ -29,10 +29,15 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/es6-promise": "0.0.32",
+    "body-parser": "^1.17.2",
     "core-js": "^2.4.1",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "morgan": "^1.8.2",
+    "promise": "^7.3.0",
     "rxjs": "^5.1.0",
+    "serve-favicon": "^2.4.3",
     "tedious": "^2.0.0",
     "zone.js": "^0.8.12"
   },
