--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "node www.js",
+    "start": "node bin/www",
     "build": "ng build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "ng lint",
@@ -31,6 +31,7 @@
     "@angular/router": "^4.0.0",
     "@types/es6-promise": "0.0.32",
     "body-parser": "^1.17.2",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
@@ -38,6 +39,7 @@
     "promise": "^7.3.0",
     "rxjs": "^5.1.0",
     "serve-favicon": "^2.4.3",
+    "systemjs": "^0.20.14",
     "tedious": "^2.0.0",
     "zone.js": "^0.8.12"
   },
