--- a/web.config
+++ b/web.config
@@ -1,57 +1,60 @@
-
-nfiguration>
-  <appSettings>
-  </appSettings>
+<configuration>
   <system.webServer>
-    <!-- mimeMap enables IIS to serve particular file types as specified by fileExtension. -->
-    <staticContent>
-      <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
-    </staticContent>
-
-    <modules runAllManagedModulesForAllRequests="false" />
-
-    <!-- Web.Debug.config adds attributes to this to enable remote debugging when publishing in Debug configuration. -->
-    <iisnode watchedFiles="web.config;*.js;routes\*.js;views\*.jade"/>
-
-    <!-- Remote debugging (Azure Website with git deploy): Comment out iisnode above, and uncomment iisnode below. -->
-    <!--<iisnode watchedFiles="web.config;*.js;routes\*.js;views\*.jade"
-      loggingEnabled="true"
-      devErrorsEnabled="true"
-      nodeProcessCommandLine="node.exe &#45;&#45;debug"/>-->
-
-    <!-- indicates that the server.js file is a Node.js application 
-    to be handled by the iisnode module -->
     <handlers>
-      <add name="iisnode" path="/bin/www" verb="*" modules="iisnode" />
-
-      <!-- Remote debugging (Azure Website with git deploy): Uncomment NtvsDebugProxy handler below.
-      Additionally copy Microsoft.NodejsTools.WebRole to 'bin' from the Remote Debug Proxy folder.-->
-      <!--<add name="NtvsDebugProxy" path="ntvs-debug-proxy/ad81dc69-210e-42c6-80da-221ed1245211" verb="*" resourceType="Unspecified"
-        type="Microsoft.NodejsTools.Debugger.WebSocketProxy, Microsoft.NodejsTools.WebRole"/>-->
+      <!-- path to application main file -->
+      <add name="iisnode" path="bin/www" verb="*" modules="iisnode" />
     </handlers>
-
-    <security>
-      <requestFiltering>
-        <hiddenSegments>
-          <remove segment="bin" />
-        </hiddenSegments>
-      </requestFiltering>
-    </security>
-
     <rewrite>
       <rules>
-        <clear />
-        <!-- Remote debugging (Azure Website with git deploy): Uncomment the NtvsDebugProxy rule below. -->
-        <!--<rule name="NtvsDebugProxy" enabled="true" stopProcessing="true">
-          <match url="^ntvs-debug-proxy/.*"/>
-        </rule>-->
+        <!-- Don't interfere with requests for node-inspector debugging -->
+        <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
+          <match url="^bin/www\/debug[\/]?" />
+        </rule>
 
-        <rule name="app" enabled="true" patternSyntax="ECMAScript" stopProcessing="true">
-          <match url="iisnode.+" negate="true" />
-          <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
-          <action type="Rewrite" url="bin\www" />
+        <!-- If you have static content, such as HTML, script files, CSS, or images, put them all in one place, such as a folder named public -->
+        <rule name="StaticContent">
+          <action type="Rewrite" url="public{REQUEST_URI}" />
+        </rule>
+
+        <!-- All other URLs are mapped to the Node.js application -->
+        <rule name="DynamicContent">
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True" />
+          </conditions>
+          <action type="Rewrite" url="bin/www" />
         </rule>
       </rules>
     </rewrite>
+
+    <!-- You can control how Node is hosted within IIS using the following options -->
+    <!--<iisnode
+      node_env="%node_env%"
+      nodeProcessCountPerApplication="1"
+      maxConcurrentRequestsPerProcess="1024"
+      maxNamedPipeConnectionRetry="3"
+      namedPipeConnectionRetryDelay="2000"
+      maxNamedPipeConnectionPoolSize="512"
+      maxNamedPipePooledConnectionAge="30000"
+      asyncCompletionThreadCount="0"
+      initialRequestBufferSize="4096"
+      maxRequestBufferSize="65536"
+      watchedFiles="*.js"
+      uncFileChangesPollingInterval="5000"
+      gracefulShutdownTimeout="60000"
+      loggingEnabled="true"
+      logDirectoryNameSuffix="logs"
+      debuggingEnabled="true"
+      debuggerPortRange="5058-6058"
+      debuggerPathSegment="debug"
+      maxLogFileSizeInKB="128"
+      appendToExistingLog="false"
+      logFileFlushInterval="5000"
+      devErrorsEnabled="true"
+      flushResponse="false"
+      enableXFF="false"
+      promoteServerVars=""
+      />-->
+    <!-- Updates to any of these files will trigger app restart -->
+    <iisnode watchedFiles="*.js;node_modules\*;routes\*.js;views\*.jade;views\account\*.jade;iisnode.yml" />
   </system.webServer>
 </configuration>
