--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "ng build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "pree2e": "webdriver-manager update --standalone false --gecko false",
+    "e2e": "protractor"
   },
   "repository": {
     "type": "git",
