--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "core-js": "^2.4.1",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "lodash.isequal": "^4.5.0",
     "morgan": "^1.8.2",
