--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "allowJS": false,
     "outDir": "./dist/out-tsc",
     "baseUrl": "src",
     "sourceMap": true,
