--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@google/maps": "^0.4.2",
+    "@ngui/map": "^0.18.4",
     "@types/es6-promise": "0.0.32",
+    "@types/googlemaps": "^3.26.16",
     "@types/jquery": "^3.2.6",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
