added new execs and changed a bit the execs compoennt'

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@google/maps": "^0.4.5",
+    "@ngui/map": "^0.19.1",
     "@types/es6-promise": "0.0.32",
+    "@types/googlemaps": "^3.29.2",
     "@types/jquery": "^3.2.6",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
