--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node bin/www",
-    "build": "ng build",
+    "build": "ng build --aot",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "ng lint",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
